# MangoHud

./: .editorconfig  .gitignore  .gitmodules  LICENSE  PKGBUILD  README.md  build-source.sh  build-srt.sh  build-with-srt-docker.sh  build.sh  build_deps.sh  charset_ascii.txt  charset_forkawesome.txt  deb_build.sh  libmangohud.conf  libmangohud.conf.in  linux32.txt  meson.build  meson_options.txt  mingw32.txt  mingw64.txt  steamrt.Dockerfile.in  version.h.in  Новый файл
client/: client.cpp  client.h  color.cpp  fps_limiter.h  gl.cpp  gl.h  gl_hooks.cpp  imgui_utils.h  layer.cpp  layer.h  mangohud.json.in  meson.build  overlay.cpp  overlay.frag  overlay.h  real_dlsym.h  vulkan.cpp  vulkan.h
control/: setup.cfg  setup.py
control/src/control/: __init__.py
data/: MangoHud.conf  io.github.flightlessmango.mangohud.metainfo.xml  mangoapp.1  mangohud.1  meson.build  presets.conf
data/shell-completions/bash/: mangohud  mangohudctl  meson.build
ipc/: client.cpp  client.h  gbm.cpp  ipc.cpp  ipc.h  ipc_client.cpp  ipc_client.h  meson.build  proto.h  socket.cpp  socket.h
mangoconfig/: emscripten.cpp  emscripten.cross  imgui.html  main.cpp  meson.build
mangoconfig/subprojects/: imgui.wrap  mangohud.wrap
mangohud-next/: README.md  meson.build
mangohud-next/client/: elfhacks.h  fps_limiter.h  gl.cpp  gl.h  layer.cpp  layer.h  mangohud.json.in  mangohud.version  meson.build  overlay.frag  overlay.vert  vulkan.cpp  vulkan.h
mangohud-next/ipc/: client.cpp  client.h  ipc.cpp  ipc_client.cpp  ipc_client.h  meson.build
mangohud-next/render/: colors.h  egl_ctx.cpp  egl_ctx.h  export.h  meson.build  shared.h  vulkan_ctx.cpp  vulkan_ctx.h
mangohud-next/render/imgui/: egl.h  imgui_ctx.cpp  imgui_ctx.h  meson.build  vk.h
mangohud-next/server/: README.md  config.cpp  config.h  main.cpp  meson.build  server.h
mangohud-next/server/common/: helpers.hpp  table_structs.h
mangohud-next/server/metrics/: exec.cpp  exec.h  fdinfo.hpp  memory.cpp  meson.build  metrics.cpp  metrics.h  panfrost.cpp  panfrost.hpp
mangohud-next/utils/: file_utils.cpp  file_utils.h  meson.build  string_utils.h
modules/Vulkan-Headers/: clone_headers.sh  meson.build
render/: colors.h  egl_ctx.cpp  export.h  imgui_ctx.cpp  imgui_ctx.h  meson.build  shared.h  vulkan_ctx.cpp  vulkan_ctx.h
render/font/: font.cpp  font.h  font_unispace.c  forkawesome.h  meson.build
render/imgui/: egl.h  imgui_ctx.cpp  imgui_ctx.h  meson.build  vk.h
render/imgui/font/: font.h  meson.build
server/: config.cpp  config.h  egl_window.cpp  egl_window.h  main.cpp  meson.build  server.h
server/common/: helpers.cpp  helpers.hpp  table_structs.h
server/metrics/: fdinfo.cpp  hwmon.cpp  hwmon.hpp  memory.cpp  memory.hpp  meson.build  metrics.cpp  metrics.h
server/metrics/cpu/: cpu.cpp  cpu.hpp  meson.build
server/metrics/gpu/: gpu.cpp  gpu.hpp  gpu_metrics.hpp  meson.build
src/: adl.cpp  ags.cpp  ags.h  amdgpu.cpp  amdgpu.h  amdgpu_libdrm.cpp  amdgpu_libdrm.h  amdgpu_metrics.cpp  amdgpu_metrics.h  async.h  auth.cpp  auth.h  battery.cpp  battery.h  blacklist.cpp  blacklist.h  config.cpp  config.h  control.cpp  control.h  cpu.cpp  cpu.h  cpu_gpu.h  cpu_win32.cpp  dbus.cpp  dbus_helpers.h  dbus_helpers.hpp  dbus_info.h  device.cpp  device.h  elfhacks.c  elfhacks.cpp  engine_types.h  faker.h  fcat.h  fex.cpp  fex.h  file_utils.cpp  file_utils.h  file_utils_win32.cpp  (+106 more)
src/app/: control.c  control.cpp  intel.cpp  layer.cpp  layer.json.in  main.cpp  mangoapp.h  mangoapp_proto.h  meson.build  setcap-helper.sh
src/app/protocol/: meson.build
src/gl/: gl.h  gl_hud.cpp  gl_hud.h  gl_renderer.cpp  gl_renderer.h  glad.c  imgui_hud.cpp  imgui_hud.h  imgui_hud_shared.cpp  imgui_hud_shared.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  inject.cpp  inject_egl.cpp  inject_glx.cpp  real_dlsym.cpp  real_dlsym.h  shim.c
src/gui/: README.txt  client_template.glade  gui.css  gui.glade  gui.py
src/gui/protos/: mangohud_pb2.py
src/kiero/: d3d11_impl.cpp  d3d11_impl.h  d3d11hook.cpp  d3d11hook.h  d3d12_impl.cpp  d3d12_impl.h  d3d9_impl.cpp  d3d9_impl.h  dx_shared.cpp  dx_shared.h  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  kiero.cpp  kiero.h  main.cpp  shared.cpp  shared.h
src/loaders/: loader_dbus.cpp  loader_dbus.h  loader_gl.cpp  loader_gl.h  loader_glx.cpp  loader_glx.h  loader_libdrm.cpp  loader_libdrm.h  loader_libinput.cpp  loader_libinput.h  loader_libudev.cpp  loader_libudev.h  loader_nvctrl.cpp  loader_nvctrl.h  loader_nvml.cpp  loader_nvml.h  loader_nvml_win32.cpp  loader_x11.cpp  loader_x11.h
src/mesa/c11/: threads.h
src/mesa/main/: hash.c  hash.h
src/mesa/util/: futex.h  hash_table.c  hash_table.h  list.h  macros.h  os_socket.c  os_socket.h  os_time.c  ralloc.c  ralloc.h  simple_mtx.h
src/obs/: meson.build  obs_plugin.c  obs_plugin.h  obs_shared.c  obs_shared.h  obs_studio.cpp  obs_studio.h
src/server/: README.txt  build.sh  client_demo.cpp  common.c  common.h  gen-pb.py  mangohud.pb.c  mangohud.pb.h  mangohud.proto  meson.build  protoc-gen-nanopb  server.cpp
src/win/: d3d11_hook.cpp  d3d11_hook.h  d3d12_hook.cpp  d3d12_hook.h  d3d_shared.cpp  d3d_shared.h  dxgi.cpp  dxgi.h  kiero.cpp  kiero.h  main.cpp  ogl_hook.cpp  win_shared.h
subprojects/artery-font-format/: LICENSE.txt  README.md  example.arfont  meson.build
subprojects/artery-font-format/artery-font/: artery-font.h  crc32.h  crc32.hpp  enums.h  serialization.h  serialization.hpp  std-artery-font.h  stdio-serialization.h  stdio-serialization.hpp  structures.h  types.h
subprojects/dearimgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h  meson.build
subprojects/implot/: implot.cpp  implot.h  implot_internal.h  implot_items.cpp  meson.build
subprojects/packagefiles/imgui-1.91.6/: meson.build  meson_options.txt
subprojects/swappy/: meson.build
subprojects/swappy/common/: CPUTracer.cpp  CPUTracer.h  ChoreographerFilter.cpp  (+16 more)
utils/: file_utils.cpp  file_utils.h  meson.build
utils/mesa/: macros.h  os_socket.c  os_socket.h  os_time.c  os_time.h
(+120 files in other folders)
