[metadata]
name = mangohud_control
version = 0.0.1
author = Simon Hallsten
author_email = flightlessmangoyt@gmail.com
description = control interface for mangohud
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
  = src

packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mangohud-control = control:main

[pycodestyle]
max-line-length = 160